--- a/Home.html
+++ b/Home.html
@@ -31,13 +31,13 @@
                         <div class="divider"></div>
 
                     <!-- add money form start -->
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="add-money-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
                               <span class="label-text">Amount</span>
                             </label>
-                            <input id="input-add-money" type="text" placeholder="Add Money Amount" class="input input-bordered" required />
+                            <input id="input-add-amount" type="text" placeholder="Add Money Amount" class="input input-bordered" required />
                           </div>
                           <div class="form-control">
                             <label class="label">
@@ -52,11 +52,35 @@
                         </form>
                       </div>
                     <!-- add money form end -->
+                     <!-- cash out money start  -->
+                     <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                      <form class="card-body">
+                        <div class="form-control">
+                          <label class="label">
+                            <span class="label-text">Amount</span>
+                          </label>
+                          <input id="input-cash-out-amount" type="text" placeholder="Cash Out Amount" class="input input-bordered" required />
+                        </div>
+                        <div class="form-control">
+                          <label class="label">
+                            <span class="label-text">Pin Number</span>
+                          </label>
+                          <input id="input-cash-out-pin-number" type="password" autocomplete="off" placeholder="Pin Number" class="input input-bordered" required />
+                          
+                        </div>
+                        <div class="form-control mt-6">
+                          <button id="btn-cash-out-money" class="btn btn-primary">Cash out</button>
+                        </div>
+                      </form>
+                    </div>
+                      <!-- cash out money end -->
                 </div>
             </div>
         </div>
     </main>
-    <script src="./js/home.js"></script>
+    <script src="./js/add-money.js"></script>
+    <script src="./js/cash-out.js"></script>
+    <script src="./js/show-btn.js"></script>
 </body>
 
 </html>
