--- a/home.html
+++ b/home.html
@@ -14,19 +14,20 @@
         <div class="mockup-phone">
             <div class="camera"></div>
             <div class="display">
-                <div class="artboard artboard-demo phone-2">
+                <div class="artboard artboard-demo phone-1">
                     <!-- account balance -->
-                    <div class="stats shadow">
+                    <div class="stats shadow mt-7">
                         <div class="stat">
                             <div class="stat-title">Account Balance</div>
-                            <div id="account-balance" class="stat-value">9400</div>
+                            <div id="account-balance" class="stat-value">1000</div>
                         </div>
                     </div>
                     <div class="divider"></div>
                           <!-- user action buttons -->
                           <div>
-                            <button id="btn-show-add-money" class="btn btn-lg">Add Money</button>
-                            <button id="btn-show-cash-out" class="btn btn-lg">Cash Out</button>
+                            <button id="btn-show-add-money" class="btn ">Add Money</button>
+                            <button id="btn-show-cash-out" class="btn">Cash Out</button>
+                            <button id="btn-show-transection" class="btn">Transection</button>
                         </div>
                         <div class="divider"></div>
 
@@ -74,13 +75,23 @@
                       </form>
                     </div>
                       <!-- cash out money end -->
+                       <!-- transection start -->
+                        <div id="transection-section" class="hidden">
+                          <h4 class="text-3xl text-center">Transection History</h4>
+                          <div id="transection-container" class="space-y-3">
+
+                          </div>
+                        </div>
+                       <!-- transection end -->
                 </div>
             </div>
         </div>
     </main>
+    <script src="./js/common-function.js"></script>
     <script src="./js/add-money.js"></script>
     <script src="./js/cash-out.js"></script>
     <script src="./js/show-btn.js"></script>
+    
 </body>
 
 </html>
